Add Travis integration

--- a/index.html
+++ b/index.html
@@ -7,9 +7,124 @@
     <title>Halil Ibrahim Sener</title>
   </head>
   <body>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">hisener</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#top">About</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
     <div class="container">
       <div class="row">
+        <div class="col-md-4">
+          <img class="img-responsive img-circle" src="http://i.imgur.com/O5Um45G.png" />
+        </div>
+        <div class="col-md-8">
+          <h1>Halil Ibrahim Sener</h1>
+          <h2>Computer Science Student</h2>
+          <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
 
+    <div class="container" id="tech-stack">
+      <div class="row">
+        <div class="col-md-12">
+          <h3>Technologies I actively use</h3>
+          <span class="label label-success">JavaScript (ES6)</span>
+          <span class="label label-success">JavaScript</span>
+          <span class="label label-success">C</span>
+          <span class="label label-success">Java</span>
+          <hr />
+          <span class="label label-success">Node.js</span>
+          <span class="label label-success">Express.js</span>
+          <hr />
+          <span class="label label-success">MongoDB</span>
+          <hr />
+          <span class="label label-success">ReactJS</span>
+          <span class="label label-success">HTML5</span>
+          <span class="label label-success">Bootstrap</span>
+          <span class="label label-success">jQuery</span>
+          <hr />
+          <span class="label label-success">npm</span>
+          <span class="label label-success">Heroku</span>
+          <span class="label label-success">Git</span>
+          <span class="label label-success">GitHub</span>
+          <span class="label label-success">Subversion</span>
+          <hr />
+          <span>I have used in past</span>
+          <span class="label label-warning">PHP</span>
+          <span class="label label-warning">MySQL</span>
+          <span class="label label-warning">CodeIgniter</span>
+          <span class="label label-warning">WordPress</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="container" id="portfolio">
+      <div class="row">
+        <div class="col-md-12">
+          <h3>Portfolio</h3>
+        </div>
+        <div class="col-md-6 col-md-4">
+          <div class="thumbnail">
+            <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=300x200&w=300&h=200" />
+            <div class="caption">
+              <h4>Test Project</h4>
+              <p>
+                <a href="#" class="btn btn-primary btn-sm" role="button">Demo</a>
+                <a href="#" class="btn btn-default btn-sm" role="button">Code</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-md-4">
+          <div class="thumbnail">
+            <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=300x200&w=300&h=200" />
+            <div class="caption">
+              <h4>Test Project</h4>
+              <p>
+                <a href="#" class="btn btn-primary btn-sm" role="button">Demo</a>
+                <a href="#" class="btn btn-default btn-sm" role="button">Code</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-md-4">
+          <div class="thumbnail">
+            <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=300x200&w=300&h=200" />
+            <div class="caption">
+              <h4>Test Project</h4>
+              <p>
+                <a href="#" class="btn btn-primary btn-sm" role="button">Demo</a>
+                <a href="#" class="btn btn-default btn-sm" role="button">Code</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div id="contact">
+        </div>
       </div>
     </div>
 
@@ -21,5 +136,14 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-91454609-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
